增加续保操作

--- a/BHClinentDemo/BHClinentDemo/BHClinentDemo.csproj
+++ b/BHClinentDemo/BHClinentDemo/BHClinentDemo.csproj
@@ -35,7 +35,12 @@
     <Reference Include="Newtonsoft.Json">
       <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net40\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <Reference Include="Qiniu, Version=7.2.15.0, Culture=neutral, PublicKeyToken=2894d75bb9f220bf, processorArchitecture=MSIL">
+      <HintPath>..\packages\Qiniu.Shared.7.2.15\lib\net40\Qiniu.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Net.Http, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="System.Net.Http.Formatting, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
@@ -47,10 +52,17 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BHClient.cs" />
+    <Compile Include="Common\BHExtent.cs" />
+    <Compile Include="Common\ObjectToDictionaryHelper.cs" />
+    <Compile Include="Model\UniteLoginRequest.cs" />
+    <Compile Include="Model\UniteLogOutRequest.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Common\Uititly.cs" />
+    <Compile Include="Model\UniteRenewalRequest.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
